pgdt/tests/snapshots/help_text__query_long_help.snap
---
source: pgdt/tests/help_text.rs
expression: "help_page(&[\"query\", \"--help\"])"
---
Stream a table's rows, optionally projected to named columns and filtered by a boolean expression
over single-column predicates

Usage: pgdt query [OPTIONS] --source <SOURCE> --table <TABLE>

Options:
      --source <SOURCE>
          The dump to scan — a path or a URL, as `parse` takes it. `query` can never answer from a
          cache alone — row data is never cached — so this is always required

      --table <TABLE>
          Table name, qualified (`schema.table`) or bare. Taken exactly as given, like `--column`
          and unlike a `--filter` term

      --dtcache <DTCACHE>
          Cache file path, or `none` to ignore any existing cache and perform a fresh scan without
          persisting it

      --filter <FILTER>
          Single-column filter: `column=value`, `column!=value`, `column<value`, `column<=value`,
          `column>value`, `column>=value`, `column IS DISTINCT FROM value`, `column IS NOT DISTINCT
          FROM value`, `column IS NULL`, or `column IS NOT NULL`. Repeatable — every term must
          match, so the terms are ANDed. `OR`, negation and grouping are `--where`, which takes an
          expression over these same terms; giving both flags ANDs them (`docs/design/decisions.md`,
          "Predicates").
          
          Every operator but the two NULL tests compares **typed**: the filter's value is read with
          the column's own decoder, so a value that is not of that type is refused by name rather
          than matching nothing. The four ordering operators are additionally refused on a column
          whose type did not resolve or that is nested; `=`/`!=` compare such a column as text.
          
          Spaces around the operator are not data: `name = alpha` asks for `alpha`. Quote either
          side — `'` and `"` both work — to say otherwise: `name = " x"` keeps the leading space,
          and a quote inside a quoted part is doubled (`name = 'it''s'`). Quotes work on the column
          side too, which is how a column named `a=b` is asked for: `"a=b"=x`.
          
          A term is never read as an expression — but nor may it hold what `--where` would read as
          one. An unquoted `AND`, `OR` or `NOT` as a word, or a paren, is refused rather than taken
          literally, so no string means one thing here and another under `--where`; quote the part
          that holds it, or use `--where`.

      --where <EXPR>
          Boolean expression over `--filter`'s terms: `AND`, `OR`, `NOT` and parens, with `NOT`
          binding tighter than `AND` and `AND` tighter than `OR`. The keywords are case-insensitive
          and are recognised only as whole words outside quotes, so `--where 'tag=and'` is still an
          equality against `and`.
          
          Anything that is not a paren or a keyword is a term, read by exactly the grammar
          `--filter` reads — so `--where 'note=a and b'` is `note=a` AND the term `b`, which has no
          operator and is refused. `--filter` refuses that same string too, for holding a reserved
          spelling: a string both flags take means the same thing under both.
          
          A value that holds a paren or an unquoted keyword needs quoting — `--where "v='(1,a)'"` —
          since a bare `(` groups.
          
          Given with `--filter`, the expression and every term are ANDed.

      --column <NAME>
          Materialize only this column, repeatable — the output carries the columns in the order the
          flags give them, which need not be the file's. A name the table does not carry is an
          error, and so is a repeated one. Omit it entirely for every column
          (`docs/design/decisions.md`, "D28").
          
          A column that is not projected is never decoded, so projecting a column away is also the
          way past a value that fails to decode while keeping every other column typed.
          
          A `--filter` term may name a column this does not: the projection decides what is built,
          never what may be tested.
          
          The name is taken exactly as given — the shell has already delimited it, so there is no
          quoting to strip and a column whose name really does carry quote marks stays askable.

      --no-columns
          Materialize no columns at all — the `COUNT(*)` shape. Each row prints as an empty line and
          no header line is printed, so `--no-columns | wc -l` is a row count. Incompatible with
          `--column`

      --database <DATABASE>
          Select which database to query when `table` is ambiguous across a multi-`\connect` dump
          (`docs/design/decisions.md`, "D49")

      --schema-mode <SCHEMA_MODE>
          `typed` (default) resolves column types against the dump's DDL; `strings` skips that
          lookup entirely, matching the untyped byte-for-byte output — the way out of
          `Error::MetadataNotScanned` for a database an incremental scan hasn't read the DDL for yet
          
          [default: typed]
          [possible values: typed, strings]

      --chunk-size <BYTES>
          Bytes requested per read from the dump — the same knob `parse` carries, and with the same
          measured answer behind its default

      --max-line-bytes <BYTES>
          The longest line the scan accepts, in bytes — the same limit `parse` carries, applied to
          both of a query's passes over the file

      --statistics <USE>
          Whether to use the statistics `parse` recorded: `all`, the default, skips each stretch of
          the table's data whose statistics prove no row in it satisfies the filter, and says on
          stderr how much was skipped, and stops reading data sorted on a column the filter bounds
          at its first row past the bound, saying once the rows are printed how much that left
          unread; `none` reads every row. The rows printed are the same either way. A value that
          fails to decode is reported only where its row is read, so `none` is also how to find one
          in data left unread
          
          [default: all]
          [possible values: all, none]

      --strict-identity[=<TERMS>]
          Which weak signs of a source's identity must hold, as a comma-separated selection of
          `time`, `location` and `none`; the flag alone is `time,location`. Left unstated, they are
          advisory: a dump that was moved, copied or touched since it was parsed is read with a
          warning, because data moves and none of these signals proves the bytes changed. `time`
          binds the modification signal — an mtime, or a server's `Last-Modified` and `ETag` — so a
          cache written against another one, or a source that offers none at all, stops the run
          instead. `location` binds the origin a remote cache records, which a local file was not
          fetched from, so it binds nothing there.
          
          **A source that changes while it is being read is an error whatever this says**, because
          bytes moving underneath a read that has already returned some of them cannot produce a
          right answer; `none` is the only way to turn that into a warning, and it turns off
          everything else too.
          
          It asks one question of every command, and needs a source to ask it of, so stating it
          without `--source` — `info` answering from the cache alone, whose identity is not
          unreadable but absent — is a usage error.

      --overwrite-unusable-cache
          Start cold over a cache that cannot be used and replace it, rather than refusing: one
          written for a file of another size or compression, by another pgdt build, or cut short.
          Left unstated, each of those stops the run before the dump is read, since it is almost
          always the wrong path or a file that changed — this is for a source whose file is replaced
          under the same name. A file that is not a pgdt cache is never overwritten. It governs only
          the cache found at the start: a dump that changes while it is being read still stops the
          run (`--strict-identity`)

      --jobs <N>
          How many workers pgdt may ask for. Left unstated, the file decides: a plain dump reads
          serially, and an `.xz` one takes the CPUs this process was given, or its own block count
          where that is smaller — lowered again to the number of readers the memory allowance can
          pay for, where that is fewer, whether that allowance was discovered or stated with
          `--memory`. A count stated here is never lowered that way.
          
          **It states what is asked for, not what is delivered.** Two input shapes admit no
          parallelism whatever this says: a `.xz` file with one block, and an `INSERT` run
          (`docs/manual/dump-inspection.md`). And on a plain file the read buffer pool's own depth
          binds before this does, so a `parse` above `--jobs 4` runs four workers and queues the
          rest.
          
          What it reaches is `query`'s row replay, cut into at most this many sub-streams read at
          once and merged back into file order; a `parse`'s structure scan, which splits the
          interior of every `COPY` block large enough to cut and folds the answers back into one
          block list; and how many decoded `.xz` blocks the source retains: four, or one per
          would-be reader where that is more.
          
          **On `query`, `--memory` has to cover a second cost before this number is delivered at
          all** — see that flag's own doc.

      --memory <BYTES>
          How much memory pgdt may hold resident in total, in bytes — the number you would give the
          container. Left unstated, pgdt reads the memory limit it is running under — the smallest
          cgroup limit that binds — and uses that; where no limit is set it stays inside half the
          memory the machine reports available. A number typed here replaces whatever was discovered
          and is carved up exactly the same way.
          
          **What it is carved into.** A 384 MiB reserve comes off the top for everything pgdt holds
          that no buffer accounts for — the runtime's threads, the allocator's per-thread arenas,
          the decoder state a compressed source keeps outside its pools, the binary itself. What is
          left is what the read buffers may hold, and the worker count is lowered again so that a
          fifth of the whole number, plus a further 256 MiB, stays unspent. So the buffer budget a
          run reports is always smaller than what you typed, and the `resolved the arrangement` line
          on stderr names both.
          
          **What is left under that margin is what a gathering `parse`'s statistics may hold**,
          named as `statistics_bytes=` on the same line. A table whose statistics will not fit it is
          skipped — the scan finishes, stderr says which table and what it declined under, the cache
          records it, and only a larger allowance re-reads it. Nothing is killed for want of
          statistics, and raising this is what fits a wide table.
          
          It is a real bound rather than a target: a `.xz` file that does not leave room inside the
          buffer budget for one reader — one of its blocks, a read buffer and the decompressor's own
          working memory, beside the three further blocks the pool keeps however few workers run —
          is read through the streaming decoder instead of being decoded a block at a time, which is
          correct but slower on backward reads. Raise this to buy the block path back on a file
          written with large blocks (`xz -9 -T0`, `xz --block-size=`).
          
          **It is also what decides how many of `--jobs`' workers read at once**, on both commands:
          the largest count whose whole cost fits inside the buffer budget. For an ordinary 24
          MiB-block `.xz` the first reader is about 106 MiB and each one past the fourth about 58,
          so a 64 MiB buffer budget affords none of them — which is why a discovered allowance is
          sized off the count the source recommends rather than off a constant.
          
          **On `query` the buffer budget divides by two terms rather than one**: what a worker costs
          to read, plus the 64 MiB a sub-stream's held batch may pin (`docs/design/decisions.md`,
          "I/O, memory and parallelism") — charged on a plain file, where a batch pins read buffers
          the first term never counted, and not on a block-decoding `.xz`, whose first term already
          counts a decoded block. At 64 MiB — which is what a plain file gets unless a limit or this
          flag says otherwise — the plain file's sum already exceeds the budget, so rather than
          decline the readers the plan narrows each sub-stream's batch span to seat them
          (`docs/design/decisions.md`, "D84"): `--jobs N` buys N sub-streams, bought with batch size
          rather than with buffers. `parse` is unaffected by the second term: it builds no batches,
          so nothing on that path pins a span.

  -h, --help
          Print help (see a summary with '-h')
