pgdt/tests/snapshots/help_text__root_short_help.snap
---
source: pgdt/tests/help_text.rs
expression: "help_page(&[\"-h\"])"
---
Query pg_dump plain-format files without loading them into memory

Usage: pgdt <COMMAND>

Commands:
  parse  Scan a dump file and build the structure cache — the only command that scans ahead of what
         was asked (`pgdt info` reports from the cache this leaves; a `query` maps only what its
         table needs, but persists that as it goes unless told `--dtcache none`). Resumes from a
         matching cache rather than restarting, and banks its progress at `COPY` block boundaries as
         it goes — including on Ctrl-C, which saves what has been scanned and then ends the process
         by that signal, or with status 128+n as a container's init — so an interrupted scan is not
         wasted work. Remove the cache file to force a scan from byte 0
  info   Report what a dump's cache holds. **`info` never scans** — it reads the cache `pgdt parse`
         wrote and errors if there is not one, rather than starting an hours-long scan on your
         behalf (`docs/design/decisions.md`, "D61"). A cache from an unfinished scan is reported for
         as far as it got, with the coverage stated at the top
  query  Stream a table's rows, optionally projected to named columns and filtered by a boolean
         expression over single-column predicates
  help   Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version
