pgdt/tests/snapshots/help_text__sql_long_help.snap
---
source: pgdt/tests/help_text.rs
expression: "help_page(&[\"sql\", \"--help\"])"
---
A SQL shell over dumps `pgdt parse` has cached: DataFusion's own CLI, with each `--dump` registered
as catalogs, one per database it holds.

It never parses: a dump is read through the complete cache `pgdt parse` leaves, and one without is
refused naming the `parse` that builds it. `CREATE EXTERNAL TABLE … STORED AS PGDUMP` registers one
table, and `SET pgdump.*` states a session's provider settings. Every flag but `--dump` and
`--strict-identity` is DataFusion's own, as its CLI ships it — `--memory-limit` among them, the
limit on DataFusion's own memory pool, which the dumps' scans bill against the allowance they share.

Usage: pgdt sql [OPTIONS]

Options:
  -p, --data-path <DATA_PATH>
          Path to your data, default to current directory

  -b, --batch-size <BATCH_SIZE>
          The batch size of each query, or use DataFusion default

  -c, --command [<COMMAND>...]
          Execute the given command string(s), then exit. Commands are expected to be non empty.

  -m, --memory-limit <MEMORY_LIMIT>
          The memory pool limitation (e.g. '10g'), default to None (no limit)

  -f, --file [<FILE>...]
          Execute commands from file(s), then exit

  -r, --rc [<RC>...]
          Run the provided files on startup instead of ~/.datafusionrc

      --format <FORMAT>
          [default: automatic]
          [possible values: csv, tsv, table, json, nd-json, automatic]

  -q, --quiet
          Reduce printing other than the results and work quietly

      --mem-pool-type <MEM_POOL_TYPE>
          Specify the memory pool type 'greedy' or 'fair'
          
          [default: greedy]

      --top-memory-consumers <TOP_MEMORY_CONSUMERS>
          The number of top memory consumers to display when query fails due to memory exhaustion.
          To disable memory consumer tracking, set this value to 0
          
          [default: 3]

      --maxrows <MAXROWS>
          The max number of rows to display for 'Table' format
          [possible values: numbers(0/10/...), inf(no limit)]
          
          [default: 40]

      --color
          Enables console syntax highlighting

  -d, --disk-limit <DISK_LIMIT>
          Available disk space for spilling queries (e.g. '10g'), default to None (uses DataFusion's
          default value of '100g')

      --object-store-profiling <OBJECT_STORE_PROFILING>
          Specify the default object_store_profiling mode, defaults to 'disabled'.
          [possible values: disabled, summary, trace]
          
          [default: Disabled]

      --dump <[NAME=]SOURCE[:strings][:unrepresentable=MODE][:postgres-invalid-values=MODE][:strict-identity=TERMS]>
          Register a pg_dump file as catalogs, one per database it holds, read through the cache
          `pgdt parse` leaves. A database the file names is a catalog of that name, unless NAME= is
          given; NAME= is required for a dump that names no database, and refused for one of
          several. :strings reads every column as its text, :unrepresentable=refuse refuses at
          planning a query needing the values of a column holding one its type cannot hold, where
          the default, `null`, reads such a value as NULL and `text` reads such a column as its
          text, :postgres-invalid-values=ignore reads what PostgreSQL refuses and the default,
          `default`, refuses too where it can — a float past its type's range as the largest value
          of its sign and one below it as zero, a `varchar(n)` or `char(n)` value past its length as
          written, a NULL in a `NOT NULL` column as NULL — and :strict-identity=TERMS states this
          dump's strictness where --strict-identity would. Repeatable

      --strict-identity[=<TERMS>]
          Bind identity signals, as `pgdt --strict-identity` does, for every --dump and STORED AS
          PGDUMP that states none of its own: `time` refuses a cache whose recorded modification
          signal the dump no longer states, `location` one written for another URL, the bare flag
          both. A dump changing under a scan fails it under every selection but `none`, so a server
          stating neither a strong entity tag nor a Last-Modified is refused; `none` binds nothing,
          that check included, and reads it anyway, and `advisory` is the default, which a dump
          under a stricter session states to keep that check

  -h, --help
          Print help (see a summary with '-h')

DataFusion CLI v55.1.0
